css/style.css
body{
    background: white;
}
.side_bar{
    float: left;
    background-color:#DAA520;
    width: 20%;
}
.side_header{
    background-color: black;
    color: #DAA520;
    text-align: center;
}
.contact_details{
    text-align: left;
}
.side_header{
    margin-top: 20%;
    margin-bottom: 20%;
}
.about_me_details{
    padding-left: 10%;
    padding-right: 10%;
}
.hobbies{
    padding-top: 60%;
}
.hobbies_details{
    text-align: center;
}
img { 
    width: 50%;
    height: 15%;
    border-radius: 50%;
    padding-left: 25%;
    padding-right: 25%;
    padding-top: 10%;
    padding-bottom: 10%;
}
.main_section{
    float: left;
    width: 80%;
    height: 100%;
    font-size: small;
}
.profile{
padding-left: 3%;
}
.my_name{
    padding-top: 9%;
    font-size: 400%;
}
.title{
    padding-bottom: 3%;
    font-size: 200%;
}
.header_icon{
    color: #DAA520;
}
.section_header{
    padding-left: 3%;
    padding-top: 3%;
    display: flex;
    flex-direction: row;
    font-size: x-large; 
}
.section_title{
    padding-left: 2%;
}
.section_element_row{
    display: flex;
    flex-wrap: wrap;
    padding-left: 3%;
    padding-top: 3%;
}
.date_place{
    width: 30%;
}
.discription_details{
    display: flex;
    flex-direction: column;
    width: 60%;
    margin-bottom: 2%;
}
.company_name{
    font-size: 1.1rem;
}
.company_role{
    font-size: 0.8rem;
}
.company_job_description{
    font-size: 0.75rem;
}
.references_row{
    display: flex;
    flex-wrap: wrap;
    padding-top: 3%;
    padding-left: 3%;
}
.row_icon{
    padding-right: 0.8rem;
    color:#DAA520;
}
.references_row{
justify-content: flex-start;
}


.line{
    margin-left: 3%;
    margin-right: 8%;
    border-top: 1px solid #DAA520;
}
.name_line{
    display: inline;
    border-bottom: 1px solid #DAA520;
}


@media all and (max-width: 768px){
    .side_bar{
        display: flex;
        display: inline-block;
        width: 100%;
    }
    .contact_details{
        text-align: center;
    }
    .side_header{
        margin-top: 5%;
        margin-bottom: 5%;
    }
    .hobbies{
        padding-top: 2%;
    }
}


@media all and (min-width: 768px) and (max-width: 1280px){
    .side_bar{
        display: flex;
        display: inline-block;
        width: 100%;
    }
    .contact_details{
        text-align: center;
    }
    .side_header{
        margin-top: 5%;
        margin-bottom: 5%;
    }
    .hobbies{
        padding-top: 2%;
    }
}

